# add_sea_orm_column_name

./: .gitignore  Cargo.toml  README.md  consumer_product_goods.rs  use.sh
maketools/: build.py
src/: main.rs  main.rs.bak
