[package]
name = "add_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"

[profile.dev]
overflow-checks = false
strip = true
debug = 0
debug-assertions = false

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
panic = "abort"
incremental = false
